[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "tree-frame"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "pandas"
]

[tool.mypy]
disallow_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
files = ["python", "tests"]

[[tool.mypy.overrides]]
module = ["pyarrow.*", "pandas.*", "tree_frame.tree_frame"]
ignore_missing_imports = true